--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 nav .burger~.menu>a {
-  color: black;
+  color: rgb(102, 96, 96);
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
