--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> {{ page.title }} </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
-  <link rel="stylesheet" href="/css/carousel.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/css/carousel.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
 </head>
 
 <body>
@@ -36,8 +36,8 @@
 
   <p id="footer"> Designed by plantainchip </p>
 
-  <script src="/js/carousel.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="{{site.baseurl}}/js/carousel.js"></script>
+  <script src="{{site.baseurl}}/js/main.js"></script>
 </body>
 
 </html>
