--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
       <label for="bmenub" class="burger pseudo button">menu</label>
 
       <div class="menu">
-        <a href="#" class="pseudo button icon-picture">Home</a>
-        <a href="#" class="pseudo button icon-picture">Gallery</a>
-        <a href="#" class="pseudo button icon-picture">Prints</a>
-        <a href="#" class="pseudo button icon-picture">Contact</a>
+        <a href="{{site.baseurl}}/index.html" class="pseudo button icon-picture">Home</a>
+        <a href="{{site.baseurl}}/gallery.html" class="pseudo button icon-picture">Gallery</a>
+        <a href="{{site.baseurl}}/about.html" class="pseudo button icon-picture">Prints</a>
+        <a href="{{site.baseurl}}/about.html" class="pseudo button icon-picture">Contact</a>
 
       </div>
     </nav>
